src/main/java/com/example/gymcot/error/CustomAuthenticationFailureHandler.java
package com.example.gymcot.error;

import org.springframework.security.core.AuthenticationException;
import org.springframework.security.web.authentication.AuthenticationFailureHandler;

import javax.servlet.ServletException;
import javax.servlet.http.HttpServletRequest;
import javax.servlet.http.HttpServletResponse;
import java.io.IOException;

public class CustomAuthenticationFailureHandler implements AuthenticationFailureHandler {
    @Override
    public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
        ExceptionCode exceptionCode = ExceptionCode.NOT_FOUND_USER;
        response.setContentType("application/json;charset=UTF-8");
        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
        response.getWriter().println("{ \"message\" : \"" + exceptionCode.getMessage()
                + "\", \"code\" : \"" + exceptionCode.getCode()
                + "\", \"status\" : " + exceptionCode.getMessage()
                + "}"
        );
    }
}
